src/objects/Team_Roles__c.object
<CustomObject>
    <description>Rare staff roles for campaigns -- developing for PSC workflow</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this team member still active in this role for the campaign/cohort/etc.?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <formula>Member_Name__r.Email</formula>
        <inlineHelpText>To display current email address of Team Member - used for scorecard submission alerts</inlineHelpText>
        <label>Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Date the team member ended his/her role with the campaign/cohort/etc.</description>
        <inlineHelpText>When did the team member ended his/her role with the campaign/cohort/etc.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Who is on this team?</inlineHelpText>
        <label>Member Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Team Roles</relationshipLabel>
        <relationshipName>Team_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member_Type__c</fullName>
        <description>The specific role for this user for the specified campaign/cohort/etc.</description>
        <label>Member Type</label>
        <picklist>
            <picklistValues>
                <fullName>Monitoring Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cohort Director</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rare_Campaign__c</fullName>
        <description>Campaign this user is associated with</description>
        <label>Rare Campaign</label>
        <referenceTo>RARE_Campaign__c</referenceTo>
        <relationshipName>Campaign_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Scorecard_Role__c</fullName>
        <formula>CASE( Member_Type__c,
&quot;Monitoring Specialist&quot;, &quot;Submitter&quot;,
&quot;Program Manager&quot;, &quot;Submitter&quot;,
&quot;Cohort Director&quot;, &quot;Approver&quot;,
&quot;&quot;)</formula>
        <inlineHelpText>Determines if Campaign Member is required to receive notification of new scorecard</inlineHelpText>
        <label>Scorecard Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Date the team member start his/her role with this campaign/cohort/etc.</description>
        <inlineHelpText>When did the team member start his/her role with this campaign/cohort/etc.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Team Roles</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Role ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>